Fixed active admin ingredients permissions, added ingedients

--- a/app/views/ingredients/_ingredient.html.erb
+++ b/app/views/ingredients/_ingredient.html.erb
@@ -1,5 +1,5 @@
 <div class ="ingredient">
   <%= image_tag "ingredients/" + ingredient.image %>
   <h4><%= ingredient.name %></h4>
-  <p><strong><%= ingredient.price %></strong> / <%= ingredient.measurement %></p>
+  <p><strong><%= format("$%.2f",ingredient.price) %></strong> / <%= ingredient.measurement.name %></p>
 </div>
