--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -15,19 +15,20 @@ html
             a.nav-link href="#"
               span.sr-only (current)
           li.nav-item
-            a.nav-link href="#"  Ingredients
+            a.nav-link href="/ingredients"  Ingredients
           li.nav-item
-            a.nav-link href="#"  Equipment
+            a.nav-link href="/equipment"  Equipment
           li.nav-item
-            a.nav-link href="#"  Kits
+            a.nav-link href="/kits"  Kits
           li.nav-item
-            a.nav-link href="#"  Recipes
+            a.nav-link href="/recipes"  Recipes
           li.nav-item.dropdown
             a#supportedContentDropdown.nav-link.dropdown-toggle aria-expanded="false" aria-haspopup="true" data-toggle="dropdown" href="http://example.com"  Information
             .dropdown-menu aria-labelledby="supportedContentDropdown"
               - @static_pages.each do |static_page|
-                - page_link = static_page.title.tr(" ","_")
-                a.dropdown-item href="/#{page_link}" = static_page.title
+                - if static_page.title != "Not Found"
+                  - page_link = static_page.title.tr(" ","_")
+                  a.dropdown-item href="/#{page_link}" = static_page.title
         form.form-inline.float-xs-right
           input.form-control placeholder="Search" type="text" /
           button.btn.btn-outline-success type="submit"  Search
