Fixed all of the bugs with shopping cart

--- a/app/views/order_items/create.js.slim
+++ b/app/views/order_items/create.js.slim
@@ -1,4 +1,6 @@
 - if @order.errors.any? || @order_item.errors.any?
-  =alert("not valid")
+  javascript:
+    alert("not valid")
 - else
-  =$(".cart-text").html("<%= escape_javascript(render 'layouts/cart_text') %>")
+  javascript:
+    $(".cart-text").html("<%= escape_javascript(render 'layouts/cart_text') %>")
