--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,6 +9,14 @@ html
   body
     .container
       h1.cart-text =render 'layouts/cart_text'
+      - if current_customer
+        ul
+          li= current_customer.email
+          li= link_to "Log out", logout_path, method: "delete"
+      - else
+        ul
+          li= link_to "Login", 'login'
+          li= link_to "Signup", 'signup'
       nav.navbar.navbar-light.bg-faded
         a.navbar-brand href="/"  Strange Brew Supplies
         ul.nav.navbar-nav
