--- a/app/views/customers/new.html.slim
+++ b/app/views/customers/new.html.slim
@@ -3,7 +3,11 @@
     .form
       h1 Sign up
       = form_for(@customer) do |f|
-        = f.text_field :full_name, :placeholder => "Full name"
-        = f.email_field :email, :placeholder => "Email"
-        = f.password_field :password, :placeholder => "Password"
-        = f.submit "Create an account", class: "btn-submit"
+        div class="form-group row"
+         = f.text_field :full_name, :placeholder => "Full name", :class => "form-control"
+        div class="form-group row"
+          = f.email_field :email, :placeholder => "Email", :class=>"form-control"
+        div class="form-group row"
+          = f.password_field :password, :placeholder => "Password", :class=>"form-control"
+        div class="form-group row"
+          = f.submit "Create an account", class: "btn btn-primary"
