--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,15 +8,15 @@ html
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body
     .container
-      h1.cart-text =render 'layouts/cart_text'
-      - if current_customer
-        ul
-          li= current_customer.email
-          li= link_to "Log out", logout_path, method: "delete"
-      - else
-        ul
-          li= link_to "Login", 'login'
-          li= link_to "Signup", 'signup'
+      ul class="nav nav-inline"
+        li.nav-item
+          p.cart-text =render 'layouts/cart_text'
+        - if current_customer
+          li.nav-item = current_customer.email
+          li.nav-item = link_to "Log out", logout_path, method: "delete"
+        - else
+          li.nav-item = link_to "Login", 'login'
+          li.nav-item = link_to "Signup", 'signup'
       nav.navbar.navbar-light.bg-faded
         a.navbar-brand href="/"  Strange Brew Supplies
         ul.nav.navbar-nav
