--- a/app/views/carts/_shopping_cart.html.slim
+++ b/app/views/carts/_shopping_cart.html.slim
@@ -4,10 +4,7 @@
       -@order_item.errors.full_messages.each do |msg|
         li =msg
 -if @order_items.size == 0
-  p.text-md-center
-    | There are no items in your shopping cart.  Please
-    = link_to "go back", "/ingredients"
-    |  and add some items to your cart.
+  p.text-md-center There are no items in your shopping cart.  Please #{link_to "go back", "/ingredients"} and add some items to your cart.
 -else
    - @order_items.each do |order_item|
      =render 'carts/cart_row', ingredient: order_item.ingredient, order_item: order_item, show_total: true
