--- a/app/views/customers/new.html.slim
+++ b/app/views/customers/new.html.slim
@@ -1,13 +1,14 @@
-.login
-  .container
-    .form
-      h1 Sign up
-      = form_for(@customer) do |f|
-        div class="form-group row"
-         = f.text_field :full_name, :placeholder => "Full name", :class => "form-control"
-        div class="form-group row"
-          = f.email_field :email, :placeholder => "Email", :class=>"form-control"
-        div class="form-group row"
-          = f.password_field :password, :placeholder => "Password", :class=>"form-control"
-        div class="form-group row"
-          = f.submit "Create an account", class: "btn btn-primary"
+.container
+  h1 Sign up
+  = form_for(@customer) do |f|
+    div class="form-group"
+      = f.label :full_name
+      = f.text_field :full_name, :class => "form-control"
+    div class="form-group"
+      = f.label :email
+      = f.email_field :email, :class=>"form-control"
+    div class="form-group "
+      = f.label :password
+      = f.password_field :password, :class=>"form-control"
+    div class="form-group "
+      = f.submit "Create an account", class: "btn btn-primary"
