Troubleshooting Customer update

--- a/app/views/customers/show.html.slim
+++ b/app/views/customers/show.html.slim
@@ -1,5 +1,5 @@
 h1 #{current_customer.full_name}'s Account Page
 h5 Email
 p #{current_customer.email}
-=link_to "Update Account","/myaccount/update"
+=link_to "Update Account","/myaccount/edit"
 =link_to "Add Address","add_address"
