--- a/app/views/customers/edit.html.slim
+++ b/app/views/customers/edit.html.slim
@@ -1,4 +1,4 @@
-= form_for @current_customer,remote: true do |f|
+= form_for current_customer, remote: true do |f|
   div class="form-group"
     = f.label :full_name
     = f.text_field :full_name, :class => "form-control"
