--- a/app/views/cust_addresses/new.html.slim
+++ b/app/views/cust_addresses/new.html.slim
@@ -1,6 +1,8 @@
 h1 Add Address
 - flash.each do |key, value|
-  div class=("alert alert-#{key}") = value
+  div class=("alert alert-danger")
+    strong Sorry
+    =value
 =form_for(@cust_address) do |f|
   div.form-group
     =f.label :full_name
