--- a/app/views/ingredients/show.html.slim
+++ b/app/views/ingredients/show.html.slim
@@ -1,6 +1,6 @@
 .row
   div class="col-md-4 col-sm-6"
-    = image_tag("ingredients/" + @ingredient.image, :class => "card-img-top img-fluid", :style => "max-height:250px")
+    = image_tag(@ingredient.image, :class => "card-img-top img-fluid", :style => "max-height:250px")
   div class="col-md-8 col-sm-6"
     h2 =@ingredient.name
     p class="card-text item-sale"
